# freedesktop_entry_parser

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
